--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,12 +1,7 @@
-name: Build
+name: Build and Deploy
 on:
   push:
-    branches:
-      - 'feature/**'
-      - 'bug/**'
-  pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build:
@@ -38,3 +33,14 @@ jobs:
           npm run lint
           npm run test
           npm run build
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Upload files to S3
+        run: |
+          aws s3 sync ./dist/octodash/ s3://${{ secrets.S3_BUCKET }} --delete
