--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,7 +31,7 @@ jobs:
           npm ci
           npm run clean
           npm run lint
-          npm run test
+          npm run test:ci
           npm run build
 
       - name: Configure AWS credentials
