--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,5 +36,5 @@ jobs:
           npm ci
           npm run clean
           npm run lint
-          npm run test
+          npm run test:ci
           npm run build
