--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "jest",
+    "test": "jest --watch",
+    "test:ci": "jest",
     "lint": "ng lint"
   },
   "jest": {
